' Generated by UML Generator
' Encoded: fLJ1Rfmm4BtxAqRgXHMmwXbjQAeSsag957MHSgXwyC84h82DZ3VHDjb-UyTWx-AoKWwvOF5uyzwyiStrOBWs-wvbmvEGFTUyWxBbm_3L62rsUuC_IYMtuW_2PzQ82g4KkcoHiP45ttY7DmsLbGRrJwp5OFG1NXb0sdGPtF5-ioKXMISXTVCbp-4A9Bx0TpuqbfT7ArkMqYFcLNMYHazuoC2hz5ePPGuzPb2iCdXMeh85DPgGDr5kR9ER8YTcmOwC2Kc2Zxn4kFSwOxD_IzKV8i_YEqf1td0XuqZ_90doNlQzGTwQ9eDAxNSq749ehfsGF81wn6e6J543zMWkd40ecy1_eWJC9UtuudCGUZ5gKhA0Q_ReT-w1QosKo_E0l5Uo66TsJiLrf_GjFcExwDfLVwZV19Qs2InDLtF35qKhwipt7uHss7lHjrBqRYTZBHvRl5ELjJibZpMNDIv2JtKVpBmq96nkjvfP3UEIkOw3h1FqNjJWT8rdll1dFdwbLeqeZz1n8IEkwy7N__hjhnO9NRxYAar3yP07w_LRVhvap9-sD2KuhFEVrklyj85kXowmtHTBTXEuHbdH3-mV
' URL: http://www.plantuml.com/plantuml/uml/fLJ1Rfmm4BtxAqRgXHMmwXbjQAeSsag957MHSgXwyC84h82DZ3VHDjb-UyTWx-AoKWwvOF5uyzwyiStrOBWs-wvbmvEGFTUyWxBbm_3L62rsUuC_IYMtuW_2PzQ82g4KkcoHiP45ttY7DmsLbGRrJwp5OFG1NXb0sdGPtF5-ioKXMISXTVCbp-4A9Bx0TpuqbfT7ArkMqYFcLNMYHazuoC2hz5ePPGuzPb2iCdXMeh85DPgGDr5kR9ER8YTcmOwC2Kc2Zxn4kFSwOxD_IzKV8i_YEqf1td0XuqZ_90doNlQzGTwQ9eDAxNSq749ehfsGF81wn6e6J543zMWkd40ecy1_eWJC9UtuudCGUZ5gKhA0Q_ReT-w1QosKo_E0l5Uo66TsJiLrf_GjFcExwDfLVwZV19Qs2InDLtF35qKhwipt7uHss7lHjrBqRYTZBHvRl5ELjJibZpMNDIv2JtKVpBmq96nkjvfP3UEIkOw3h1FqNjJWT8rdll1dFdwbLeqeZz1n8IEkwy7N__hjhnO9NRxYAar3yP07w_LRVhvap9-sD2KuhFEVrklyj85kXowmtHTBTXEuHbdH3-mV
' Generated on: 2025-11-25T15:43:30.097334124

@startuml
skinparam classAttributeIconSize 0
hide circle

class GameCharacterRegistry {
  -hm: Map<String, GameCharacter<?>> = new HashMap<>()
  --
  +addCharacter(key: String, prototype: T): void
  +get(key: String, type: Class<T>): T
}

interface Prototype {
  ~copy(): T
}

abstract class GameCharacter {
  #name: String
  #health: double
  #stamina: double
  #speed: double
  --
  +GameCharacter(name: String, health: double, stamina: double, speed: double)
  +copy(): T
  +toString(): String
}

class Warrior {
  #WeaponType: String
  #armorLevel: double
  --
  +Warrior(name: String, health: double, stamina: double, speed: double, WeaponType: String, armorLevel: double)
  +Warrior(worrier: Warrior)
  +copy(): Warrior
  +toString(): String
}

class Sniper {
  +rifleModel: String
  +range: double
  --
  +Sniper(name: String, health: double, stamina: double, speed: double, rifleModel: String, range: double)
  +Sniper(sniper: Sniper)
  +copy(): Sniper
  +toString(): String
}

class GameCharacterProtoType {
  +{static} main(args: String[]): void
}

GameCharacterRegistry o-- GameCharacter
GameCharacter ..|> Prototype
Warrior --|> GameCharacter
Warrior ..> Warrior
Sniper --|> GameCharacter
Sniper ..> Sniper
@enduml